--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -14,16 +14,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup PHP with PECL extension
-        uses: shivammathur/setup-php@v2
+      - name: Cache Composer dependencies
+        uses: actions/cache@v3
         with:
-          php-version: '8.2'
+          path: /tmp/composer-cache
+          key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+        
+      - name: Run composer install
+        uses: php-actions/composer@v6
+        with:
+          dev: no
+          php_version: 8.2
+          version: 2.5.8
+          command: install
 
       - name: Check PHP Version
         run: php -v
-              
-      - name: Run composer install
-        uses: baschny/php-composer-action@v1
-        with:
-          composer_version: 2
-          command: install
+
+      - name: Check composer version
+        run: composer -v
