--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "joshtronic/php-loremipsum": "^2.1"
+        "joshtronic/php-loremipsum": "^2.1",
+        "phpstan/phpstan": "^1.10"
     }
 }
