--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -53,7 +53,7 @@ jobs:
           node-version: 14
       
       - name: Check composer version
-        run: 'sudo cp foo.conf /etc/apache2/sites-available/foo.conf && sudo a2ensite foo.conf && systemctl reload apache2 && sudo service apache2 status'
+        run: 'sudo cp foo.conf /etc/apache2/sites-available/foo.conf && sudo a2ensite foo.conf && sudo systemctl reload apache2 && sudo service apache2 status'
 
       - name: Check php version
         run: php -v
