--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -9,17 +9,17 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-22.04
     # Service containers to run with `container-job`
-    services:
-      # Label used to access the service container
-      redis:
-        # Docker Hub image
-        image: redis
-        # Set health checks to wait until redis has started
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+    #services:
+    #  # Label used to access the service container
+    #  redis:
+    #    # Docker Hub image
+    #    image: redis
+    #    # Set health checks to wait until redis has started
+    #    options: >-
+    #      --health-cmd "redis-cli ping"
+    #      --health-interval 10s
+    #      --health-timeout 5s
+    #      --health-retries 5
           
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
