--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Setup nodejs
         uses: actions/setup-node@v2
         with:
-          node-version: '18.17.x'
+          node-version: '18.17.1'
 
       - name: Setup MySQL
         uses: mirromutth/mysql-action@v1.1
