--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -48,9 +48,9 @@ jobs:
           tools: phpstan, composer:2.5.6
 
       - name: Setup nodejs
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '18.17.1'
+          node-version: 18.17.1
 
       - name: Setup MySQL
         uses: mirromutth/mysql-action@v1.1
