--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -33,13 +33,13 @@ jobs:
           path: /tmp/composer-cache
           key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
       
-      - name: Cache node modules
-        id: cache-npm
-        uses: actions/cache@v3
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+      #- name: Cache node modules
+      #  id: cache-npm
+      #  uses: actions/cache@v3
+      #  with:
+      #    # npm cache files are stored in `~/.npm` on Linux/macOS
+      #    path: ~/.npm
+      #    key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           
       - name: Setup php
         uses: shivammathur/setup-php@v2
@@ -50,7 +50,7 @@ jobs:
       - name: Setup nodejs
         uses: actions/setup-node@v3
         with:
-          node-version: 18.17.1
+          node-version: '18.17.1'
 
       - name: Setup MySQL
         uses: mirromutth/mysql-action@v1.1
