--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -62,3 +62,6 @@ jobs:
 
       - name: Check verions
         run: 'sudo bash script.sh'
+
+      - name: Check verions two
+        run: 'node -v'
