--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -62,3 +62,8 @@ jobs:
 
       - name: Check verions
         run: 'bash script.sh'
+
+      - name: Show apache conf
+        run: 'bash apache.sh'
+
+     
