--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -26,12 +26,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         
-      - name: Cache Composer dependencies
-        id: cache-composer
-        uses: actions/cache@v3
-        with:
-          path: /tmp/composer-cache
-          key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+      #- name: Cache Composer dependencies
+      #  id: cache-composer
+      #  uses: actions/cache@v3
+      #  with:
+      #    path: /tmp/composer-cache
+      #    key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
       
       #- name: Cache node modules
       #  id: cache-npm
@@ -41,27 +41,27 @@ jobs:
       #    path: ~/.npm
       #    key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           
-      - name: Setup php
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
-          tools: phpstan, composer:2.5.6
+      #- name: Setup php
+      #  uses: shivammathur/setup-php@v2
+      #  with:
+      #    php-version: '8.2'
+      #    tools: phpstan, composer:2.5.6
 
-      - name: Setup nodejs
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.17.1'
+      #- name: Setup nodejs
+      #  uses: actions/setup-node@v3
+      #  with:
+      #    node-version: '18.17.1'
 
-      - name: Setup MySQL
-        uses: mirromutth/mysql-action@v1.1
-        with:
-          mysql version: '8.0'
-          mysql database: 'pipeline'
-          mysql user: 'developer'
-          mysql password: 'password'
+      #- name: Setup MySQL
+      #  uses: mirromutth/mysql-action@v1.1
+      #  with:
+      #    mysql version: '8.0'
+      #    mysql database: 'pipeline'
+      #    mysql user: 'developer'
+      #    mysql password: 'password'
 
-      - name: Check verions
-        run: 'bash script.sh'
+      #- name: Check verions
+      #  run: 'bash script.sh'
 
       - name: Show apache conf
         run: 'sudo bash apache.sh'
