--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -3,6 +3,9 @@ name: Manual workflow
 on:
   push:
 
+env:
+  GITHUB_WORKSPACE: /var/www/pipeline
+
 jobs:
   # This workflow contains a single job called "greet"
   greet:
@@ -64,6 +67,7 @@ jobs:
       #  run: 'bash script.sh'
 
       - name: Show apache conf
-        run: 'sudo bash apache.sh'
+        #run: 'sudo bash apache.sh'
+        run: 'echo $GITHUB_WORKSPACE'
 
      
