--- a/foo.conf
+++ b/foo.conf
@@ -1,6 +1,7 @@
 <VirtualHost *:80>
     ServerName pipeline-local.com
-    DocumentRoot /home/runner/work/pipeline/pipeline
+    #DocumentRoot /home/runner/work/pipeline/pipeline
+    DocumentRoot /var/www/html
     ErrorLog ${APACHE_LOG_DIR}/pipeline_error.log
     CustomLog ${APACHE_LOG_DIR}/pipeline_access.log combined
 </VirtualHost>
