--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,8 +25,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        #with:
-        #  path: '/var/www/pipeline'
+        with:
+          path: 'www'
         
       #- name: Cache Composer dependencies
       #  id: cache-composer
