--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -66,5 +66,5 @@ jobs:
       #  run: 'bash script.sh'
 
       - name: Show apache conf
-        run: 'sudo bash apache.sh'
+        run: 'sudo bash www/apache.sh'
      
