--- a/apache.conf
+++ b/apache.conf
@@ -1,4 +1,4 @@
-<Directory /home/runner/work/pipeline/>
+<Directory /home/runner/work/>
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
