--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,15 +25,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        #with:
-        #  path: 'www'
         
-      #- name: Cache Composer dependencies
-      #  id: cache-composer
-      #  uses: actions/cache@v3
-      #  with:
-      #    path: /tmp/composer-cache
-      #    key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+      - name: Cache Composer dependencies
+       id: cache-composer
+       uses: actions/cache@v3
+       with:
+         path: /tmp/composer-cache
+         key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
       
       #- name: Cache node modules
       #  id: cache-npm
@@ -43,11 +41,11 @@ jobs:
       #    path: ~/.npm
       #    key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
           
-      #- name: Setup php
-      #  uses: shivammathur/setup-php@v2
-      #  with:
-      #    php-version: '8.2'
-      #    tools: phpstan, composer:2.5.6
+      - name: Setup php
+       uses: shivammathur/setup-php@v2
+       with:
+         php-version: '8.2'
+         tools: phpstan, composer:2.5.6
 
       #- name: Setup nodejs
       #  uses: actions/setup-node@v3
@@ -62,8 +60,8 @@ jobs:
       #    mysql user: 'developer'
       #    mysql password: 'password'
 
-      #- name: Check verions
-      #  run: 'bash script.sh'
+      - name: Check verions
+       run: 'bash script.sh'
 
       - name: Show apache conf
         run: 'sudo bash apache.sh'
