--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -47,9 +47,6 @@ jobs:
           mysql user: 'developer'
           mysql password: 'password'
 
-      - name: Check MySQL connection
-        run: 'php index.php'
-
       - name: Check software versions
         run: 'bash versions.sh'
 
@@ -58,6 +55,29 @@ jobs:
       
       - name: Install apache
         run: 'sudo bash apache.sh'
+
+      - name: Check MySQL connection
+        run: 'php index.php'
+
+      - name: Notify slack success
+        if: success()
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_NOTIFICATIONS_BOT_TOKEN }}
+        uses: voxmedia/github-action-slack-notify-build@v1
+        with:
+          channel: app-alerts
+          status: SUCCESS
+          color: good
+
+      - name: Notify slack fail
+        if: failure()
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_NOTIFICATIONS_BOT_TOKEN }}
+        uses: voxmedia/github-action-slack-notify-build@v1
+        with:
+          channel: app-alerts
+          status: FAILED
+          color: danger
 
       #- name: Setup nodejs
       #  uses: actions/setup-node@v3
