--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -47,6 +47,9 @@ jobs:
           mysql user: 'developer'
           mysql password: 'password'
 
+      - name: Start MySQL
+        run: 'sudo service mysql start'
+
       - name: Check software versions
         run: 'bash versions.sh'
 
