--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -48,7 +48,7 @@ jobs:
           mysql password: 'password'
 
       - name: Start MySQL
-        run: 'sudo service mysql start'
+        run: 'sudo service mysql start && sudo mysql -u developer -ppassword'
 
       - name: Check software versions
         run: 'bash versions.sh'
@@ -59,8 +59,8 @@ jobs:
       - name: Install apache
         run: 'sudo bash apache.sh'
 
-      - name: Check MySQL connection
-        run: 'php index.php'
+      #- name: Check MySQL connection
+      #  run: 'php index.php'
 
       - name: Notify slack success
         if: success()
