--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -43,12 +43,12 @@ jobs:
         uses: mirromutth/mysql-action@v1.1
         with:
           mysql version: '8.0'
-          mysql database: 'pipeline'
-          mysql user: 'developer'
-          mysql password: 'password'
+          mysql root password: 'root'
+          #mysql user: 'developer'
+          #mysql password: 'password'
 
       - name: Start MySQL
-        run: 'sudo service mysql start && sudo mysql -u root'
+        run: 'sudo service mysql start && sudo mysql -u root -proot'
 
       - name: Check software versions
         run: 'bash versions.sh'
