--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -48,7 +48,7 @@ jobs:
           mysql root password: 'root'
 
       - name: Start MySQL
-        run: 'sudo service mysql start' 
+        run: 'sudo service mysql start && sudo mysql -u root -proot' 
 
       - name: Check software versions
         run: 'bash versions.sh'
