--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Setup MySQL
         uses: mirromutth/mysql-action@v1.1
         with:
-          mysql version: 8.1
+          mysql version: '8.1'
           mysql database: 'pipeline'
           mysql root password: 'root'
 
