--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,3 +22,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Cache Composer dependencies
+        id: cache-composer
+        uses: actions/cache@v3
+        with:
+          path: /tmp/composer-cache
+          key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+
+      - name: Setup PHP with Composer
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          tools: phpstan, composer:2.5.6
+
+      - name: Install Composer dependencies
+        run: 'composer install'
+
+      - name: Check MySQL connection
+        run: 'php index.php'
