--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,27 +16,30 @@ jobs:
           MYSQL_DATABASE: pipeline
           MYSQL_ROOT_PASSWORD: root
         ports:
-          - 3306:3306
+          - 32574:3306
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Cache Composer dependencies
-        id: cache-composer
-        uses: actions/cache@v3
-        with:
-          path: /tmp/composer-cache
-          key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+      - name: Sio
+        run: 'mysql --host 127.0.0.1 --port 32574 -uroot -ppassword -e "SHOW DATABASES"'
 
-      - name: Setup PHP with Composer
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
-          tools: phpstan, composer:2.5.6
+      #- name: Cache Composer dependencies
+      #  id: cache-composer
+      #  uses: actions/cache@v3
+      #  with:
+      #    path: /tmp/composer-cache
+      #    key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
 
-      - name: Install Composer dependencies
-        run: 'composer install'
+      #- name: Setup PHP with Composer
+      #  uses: shivammathur/setup-php@v2
+      #  with:
+      #    php-version: '8.2'
+      #    tools: phpstan, composer:2.5.6
 
-      - name: Check MySQL connection
-        run: 'php index.php'
+      #- name: Install Composer dependencies
+      #  run: 'composer install'
+
+      #- name: Check MySQL connection
+      #  run: 'php index.php'
