--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,7 +22,7 @@ jobs:
           mysql root password: 'root'
 
       - name: Start MySQL
-        run: 'sudo service mysql start && sudo mysql -u root -proot -e "SELECT VERSION();"' 
+        run: 'sudo mysql -u root -proot -e "SELECT VERSION();"' 
 
       #- name: Cache Composer dependencies
       #  id: cache-composer
