--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,7 +22,7 @@ jobs:
           mysql root password: 'root'
 
       - name: Start MySQL
-        run: 'sudo service mysql start && sudo sercice mysql reload && mysql --version'
+        run: 'sudo service mysql start && sudo service mysql reload && mysql --version'
         #sudo mysql -u root -proot -e "SELECT VERSION();"' 
 
       #- name: Cache Composer dependencies
