--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -14,33 +14,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup MySQL
-        uses: shogo82148/actions-setup-mysql
+        uses: shogo82148/actions-setup-mysql@v1
         with:
           distribution: "mysql"
-          version: "5.7"
+          mysql-version: "5.7"
           root-password: 'root'
           user: 'developer'
           password: 'password'
 
       - name: Start MySQL
         run: 'sudo service mysql start && sudo service mysql reload && mysql --version'
-        #sudo mysql -u root -proot -e "SELECT VERSION();"' 
-
-      #- name: Cache Composer dependencies
-      #  id: cache-composer
-      #  uses: actions/cache@v3
-      #  with:
-      #    path: /tmp/composer-cache
-      #    key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
-
-      #- name: Setup PHP with Composer
-      #  uses: shivammathur/setup-php@v2
-      #  with:
-      #    php-version: '8.2'
-      #    tools: phpstan, composer:2.5.6
-
-      #- name: Install Composer dependencies
-      #  run: 'composer install'
-
-      #- name: Check MySQL connection
-      #  run: 'php index.php'
