--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -50,4 +50,22 @@ jobs:
       - name: Cos
         run: 'curl http://pipeline-local.com/product/1'
 
-
+      - name: Notify slack success
+        if: success()
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_NOTIFICATIONS_BOT_TOKEN }}
+        uses: voxmedia/github-action-slack-notify-build@v1
+        with:
+          channel: general
+          status: SUCCESS
+          color: good
+      
+      - name: Notify slack fail
+        if: failure()
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_NOTIFICATIONS_BOT_TOKEN }}
+        uses: voxmedia/github-action-slack-notify-build@v1
+        with:
+          channel: general
+          status: FAILED
+          color: danger
