--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   # This workflow contains a single job called "greet"
-  greet:
+  pipeline:
     # The type of runner that the job will run on
     runs-on: ubuntu-22.04
     
