--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,7 @@
         }
     },
     "require-dev": {
+        "phpstan/phpstan": "^1.10",
         "symfony/maker-bundle": "^1.51",
         "symfony/stopwatch": "6.3.*",
         "symfony/web-profiler-bundle": "6.3.*"
