--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -33,13 +33,13 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          tools: phpstan, composer:2.5.6
+          tools: composer:2.5.6
 
       - name: Switch ENV to TEST
         run: 'echo "APP_ENV=test" > .env'
 
       - name: Install Composer dependencies
-        run: 'composer install --no-dev'
+        run: 'composer install'
 
       - name: Install Apache
         run: 'sudo bash resources/pipeline/apache-install.sh'
