--- a/composer.json
+++ b/composer.json
@@ -68,8 +68,14 @@
         }
     },
     "require-dev": {
+        "dbrekelmans/bdi": "^1.1",
         "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "6.3.*",
+        "symfony/css-selector": "6.3.*",
         "symfony/maker-bundle": "^1.51",
+        "symfony/panther": "^2.1",
+        "symfony/phpunit-bridge": "^6.3",
         "symfony/stopwatch": "6.3.*",
         "symfony/web-profiler-bundle": "6.3.*"
     }
