--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,12 +22,15 @@ jobs:
       - name: Create Database
         run: "mysql -uroot -proot -e 'CREATE DATABASE pipeline;'"
 
+      - name: Create cache directories
+        run: mkdir /tmp/cache/composer
+
       - name: Cache Composer dependencies
         id: cache-composer
         uses: actions/cache@v3
         with:
-          path: /tmp/composer-cache
-          key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+          path: vendor
+          key: ${{ runner.os }}-vendor-${{ hashFiles('**/composer.lock')
 
       - uses: actions/setup-node@v3
         with:
