--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: vendor
-          key: ${{ runner.os }}-vendor-${{ hashFiles('**/composer.lock')
+          key: ${{ runner.os }}-vendor-${{ hashFiles('**/composer.lock') }}
 
       - uses: actions/setup-node@v3
         with:
