--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   # This workflow contains a single job called "greet"
   pipeline:
-    # The type of runner that the job will run on
+    # The type of runner that the job will run ons
     runs-on: ubuntu-22.04
     
     steps:
