--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -13,12 +13,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Install MySQL
-        uses: shogo82148/actions-setup-mysql@v1
-        with:
-          mysql-version: "8.0"
-          root-password: 'root'
-
+      # Install MySQL is skipped, because github action has 8.0 version as default
+      # To look other versions - use package shogo82148/actions-setup-mysql@v1
       - name: Create Database
         run: "mysql -uroot -proot -e 'CREATE DATABASE pipeline;'"
 
